FDS/kubernetes/Base/Backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: node:18.9.1  # Sample Node.js image for backend application
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /app
              name: backend-code
      volumes:
        - name: backend-code
          hostPath:
            path: /path/to/backend  # Adjust this path for your development environment
