FDS/kubernetes/Base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mernapp-ingress
spec:
  rules:
    - host: example.com  # Replace with your domain if using one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
